statum-macros/tests/ui/invalid_machine_unknown_attr_key.stderr
error: Error: `#[machine]` does not accept arguments.
       Found: `#[machine(start = Draft)]`
       Expected: `#[machine] struct WorkflowMachine<WorkflowState> { ... }`
       Fix: remove the attribute arguments and link the machine to `#[state]` through its first generic parameter.
  --> tests/ui/invalid_machine_unknown_attr_key.rs:18:1
   |
18 | #[machine(start = Draft)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)
